# fastdds-rpc

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  conanfile.py  start_env_and_vscode.bat
common/rpcdds/: rpcdds.h
integrationtests/: CMakeLists.txt  test_rbic1_rpc_bridge.cpp
mocks/: MockRBIC1RpcBridgeIfc.h
rbic1/: RBIC1.exp  RBIC1.h
rbic1_rpc/: CMakeLists.txt
rbic1_rpc/include/: RBIC1Invoker.h  RBIC1Proxy.h  rpcdds.h
rbic1_rpc/include/interfaces/: RBIC1InvokerIfc.h  RBIC1ProxyIfc.h  RpcDdsIfc.h
rbic1_rpc/mocks/: MockRBIC1InvokerIfc.h  MockRBIC1ProxyIfc.h  MockRpcDdsIfc.h
rbic1_rpc/resource/idl/: RBIC1Rpc.idl
rbic1_rpc/resource/lib/: RBIC_DLL_description.txt
rbic1_rpc/src/: RBIC1Invoker.cpp  RBIC1Proxy.cpp
rbic1_rpc/unittests/: CMakeLists.txt  test_main.cpp  test_rbic1_invoker.cpp  test_rbic1_proxy.cpp  test_rbic1_rpc_bridge.cpp  test_rpcdds.cpp
src/: RBIC1.cxx  RBIC1.h  RBIC1.idl  RBIC1CdrAux.hpp  RBIC1CdrAux.ipp  RBIC1PubSubTypes.cxx  RBIC1PubSubTypes.h  RBIC1RpcBridge.cpp  RBIC1RpcBridge.h  RBIC1RpcBridgeIfc.h  TaskHandler.cpp  TaskHandler.h  invoker_main.cpp  main.cpp  proxy_main.cpp
src/qml/: main.qml
